--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="header-content">
             <div class="center-content">
-                <img src="assets/images/favicons/MainLogo.webp" alt="Le Chat Luthier Logo" class="logo">
+                <img src="assets/images/favicons/MainLogo.png" alt="Le Chat Luthier Logo" class="logo">
                 <h1>Le Chat Luthier</h1>
             </div>
             <div class="menu-dropdown">
