reset ambiance button

--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,10 @@
         </section>
         
         <!-- Ambiance Sounds Section -->
-        <h2>Ambiance Sounds</h2>
+        <div style="gap: 20px; display: flex; align-items: center; justify-content: center">
+            <h2>Ambiance Sounds</h2>
+            <button id="resetAmbient" onclick="AmbianceSounds.resetAmbientSounds()"  class="button-stop">Reset Ambiance</button>
+        </div>
         <section id="ambiance" class="section">
         </section>
         <section id="ambianceLocal" class="section">
