move socket code in client-socket.js

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script src="https://accounts.google.com/gsi/client"></script>
     <script src="https://accounts.google.com/gsi/style "></script>
     <script src="googleLogin.js"defer></script>
+    <script src="socket-client.js" defer></script>
 </head>
 <body>
     <header>
@@ -212,38 +213,6 @@
             GoogleLogin.initGoogleIdentityServices();  // Initialize Google Identity Services
             GoogleLogin.updateLoginButton();  // Ensure the button reflects the correct state
         }
-    </script>
-    <script>
-        const socket = new WebSocket('ws://localhost:3001');
-
-        socket.onopen = function (event) {
-            // Alert the user that they are
-            // connected to the WebSocket server
-            console.log('You are Connected to WebSocket Server');
-        };
-
-        // Event listener for when a message
-        //  is received from the server
-        socket.onmessage = function (event) {
-            console.log(event.data)
-        };
-
-        // Event listener for when the
-        // WebSocket connection is closed
-        socket.onclose = function (event) {
-            // Log a message when disconnected
-            //  from the WebSocket server
-            console.log('Disconnected from WebSocket server');
-        };
-
-        // Function to send a message
-        //  to the WebSocket server
-        function sendMessage(raw_message) {
-            let formated_message = JSON.stringify({type: raw_message})
-            console.log("Client side: " + formated_message)
-            socket.send(formated_message);
-        }
-
     </script>
 </body>
 </html>
