OK all good for webpack dev server

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div class="header-content">
-            <div>
+            <div class="flex">
                 <img src="images/favicons/MainLogo.PNG" alt="Le Chat Luthier Logo" class="logo">
                 <h1>Le Chat Luthier</h1>
             </div>
