Its all ok i am in a dream <3

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,10 +20,10 @@
     <!-- Webpack will inject CSS here -->
 </head>
 <body>
-    <header>
-        <div class="header-content">
-            <div class="flex">
-                <img src="images/favicons/MainLogo.PNG" alt="Le Chat Luthier Logo" class="logo">
+    <header class="h-20 mb-2 bg-zinc-800">
+        <div class="flex items-center justify-between px-6 py-2">
+            <div class="flex align-middle space-x-4 items-center">
+                <img src="images/favicons/MainLogo.PNG" alt=s"Le Chat Luthier Logo" class="logo">
                 <h1>Le Chat Luthier</h1>
             </div>
             <div class="menu-dropdown">
