--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -138,26 +138,54 @@
         <!-- Content Area -->
         <div class="flex justify-between items-center flex-grow px-4">
             <!-- Left Section: Buttons -->
-            <div class="flex-1 flex justify-center items-center space-x-2 min-w-0">
-                <button id="calmButton" class="px-4 py-2 bg-green-500 hover:bg-green-600 rounded text-sm">Play Calm</button>
-                <button id="dynamicButton" class="px-4 py-2 bg-blue-500 hover:bg-blue-600 rounded text-sm">Play Dynamic</button>
-                <button id="intenseButton" class="px-4 py-2 bg-red-500 hover:bg-red-600 rounded text-sm">Play Intense</button>
-            </div>
+            <div class="flex-1 flex justify-center items-center space-x-2 min-w-0" id="background-music-Credit"></div>
 
             <!-- Center Section: Music Player -->
-            <div class="flex-1 flex flex-col items-center justify-center min-w-0 px-4" id="background-music-Credit">
-                <h2 class="text-sm font-medium mb-1">Background Music</h2>
-                <input type="range" min="0" max="100" value="50" class="slider h-2 bg-gray-600 rounded-full appearance-none focus:outline-none focus:ring-2 focus:ring-purple-500 w-full">
-                <div id="progressBar" class="relative w-full h-2 bg-gray-600 rounded overflow-hidden mt-2">
-                    <div id="progress" class="absolute left-0 top-0 h-full bg-purple-500"></div>
+            <div class="flex-1 flex flex-col items-center justify-center min-w-0 px-4">
+                <div class="flex items-center space-x-4 mb-2">
+                    <!-- Heroicons SVGs wrapped in buttons -->
+                    <button id="calmButton" class="bg-transparent" aria-label="Play Calm">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.752 11.168l-4.018-2.31a1 1 0 00-1.516.86v4.622a1 1 0 001.516.86l4.018-2.31a1 1 0 000-1.72z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.428 15.341A8 8 0 1112 4a7.962 7.962 0 014.938 1.75m3.49 2.734a8.034 8.034 0 01-.768 8.492m0 0L21 21" />
+                        </svg>
+                    </button>
+                    <button id="dynamicButton" class="hover:text-blue-600 focus:outline-none bg-transparent" aria-label="Play Dynamic">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M5 11l7-7m0 0l7 7m-7-7v18" />
+                        </svg>
+                    </button>
+                    <button id="intenseButton" class="hover:text-red-600 focus:outline-none bg-transparent" aria-label="Play Intense">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M10.582 16.436L9 12.536l1.582-3.9M15.582 16.436L14 12.536l1.582-3.9M7 16.5h10M5.21 19l1.582-3.9m10.418 3.9l1.582-3.9M6 6.75l6-1.5 6 1.5" />
+                        </svg>
+                    </button>
+                </div>
+                <!--CSS code also in src/css/tailwind.css--->
+                <div id="progressBar" class="relative w-full h-2 bg-slate-100 border border-spacing-0.5 border-slate-400 rounded overflow-hidden">
+                    <div id="progress" class="absolute left-0 top-0 h-full bg-gradient-to-r from-pink-500 via-purple-500 to-blue-500 transition-all ease-in-out" style="width: 0%;"></div>
                 </div>
             </div>
 
-            <!-- Right Section: Theme Selector -->
-            <div class="flex-1 flex justify-center items-center min-w-0">
+            <!-- Right Section: Theme Selector with Icon and Progress Bar -->
+            <div class="flex-1 flex items-center justify-evenly min-w-0 space-x-4">
+                <!-- Theme Selector -->
                 <select id="contextSelector" class="px-3 py-2 bg-gray-700 text-white rounded focus:ring-2 focus:ring-purple-500">
                     <option>default</option>
                 </select>
+
+                <!-- Cool Icon -->
+                <div class="flex align-middle items-center p-2 space-x-1.5">
+                    <div class="flex items-center justify-center bg-none text-fontColor p-2 rounded">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="h-6 w-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
+                        </svg>
+                    </div>
+
+                    <!-- Input Progress Bar -->
+                    <input id="music-volume" type="range" min="0" max="100" value="50"
+                           class="slider h-1.5 bg-slate-100 border border-spacing-1 border-slate-400 rounded-full appearance-none focus:outline-none focus:ring-2 focus:ring-purple-500 max-w-[5rem]">
+                </div>
             </div>
         </div>
     </div>
