--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -142,23 +142,37 @@
 
             <!-- Center Section: Music Player -->
             <div class="flex-1 flex flex-col items-center justify-center min-w-0 px-4">
-                <div class="flex items-center space-x-4 mb-2">
+                <div class="flex items-center justify-evenly w-full mb-2">
                     <!-- Heroicons SVGs wrapped in buttons -->
-                    <button id="calmButton" class="bg-transparent" aria-label="Play Calm">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.752 11.168l-4.018-2.31a1 1 0 00-1.516.86v4.622a1 1 0 001.516.86l4.018-2.31a1 1 0 000-1.72z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.428 15.341A8 8 0 1112 4a7.962 7.962 0 014.938 1.75m3.49 2.734a8.034 8.034 0 01-.768 8.492m0 0L21 21" />
+                    <button id="calmButton" class="group bg-transparent flex flex-col items-center" aria-label="Play Calm">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                             fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                             stroke-linejoin="round" class="h-5 w-5 stroke-2 stroke-fontColor">
+                            <path d="M9 18V5l12-2v13"></path>
+                            <circle cx="6" cy="18" r="3"></circle>
+                            <circle cx="18" cy="16" r="3"></circle>
                         </svg>
+                        <span class="text-[8px] font-medium tracking-widest text-fontColor">CALM</span>
                     </button>
-                    <button id="dynamicButton" class="hover:text-blue-600 focus:outline-none bg-transparent" aria-label="Play Dynamic">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M5 11l7-7m0 0l7 7m-7-7v18" />
+                    <button id="dynamicButton" class="bg-transparent flex flex-col items-center" aria-label="Play Dynamic">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                             fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                             stroke-linejoin="round" class="h-5 w-5 stroke-2 stroke-fontColor">
+                            <path d="M9 18V5l12-2v13"></path>
+                            <circle cx="6" cy="18" r="3"></circle>
+                            <circle cx="18" cy="16" r="3"></circle>
                         </svg>
+                        <span class="text-[8px] font-bold tracking-widest text-fontColor">DYNAMIC</span>
                     </button>
-                    <button id="intenseButton" class="hover:text-red-600 focus:outline-none bg-transparent" aria-label="Play Intense">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M10.582 16.436L9 12.536l1.582-3.9M15.582 16.436L14 12.536l1.582-3.9M7 16.5h10M5.21 19l1.582-3.9m10.418 3.9l1.582-3.9M6 6.75l6-1.5 6 1.5" />
+                    <button id="intenseButton" class="bg-transparent flex flex-col items-center" aria-label="Play Intense">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                             fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                             stroke-linejoin="round" class="h-5 w-5 stroke-2 stroke-fontColor">
+                            <path d="M9 18V5l12-2v13"></path>
+                            <circle cx="6" cy="18" r="3"></circle>
+                            <circle cx="18" cy="16" r="3"></circle>
                         </svg>
+                        <span class="text-[8px] font-bold tracking-widest text-fontColor">INTENSE</span>
                     </button>
                 </div>
                 <!--CSS code also in src/css/tailwind.css--->
