--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,9 +32,14 @@
                       <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                     </svg>
                 </button>
-                <div class="menu-content" id="menu-content">
-                    <button id="google-login-button">Login with Google</button>
-                    <button id="openEditSoundModal" style="display: none;">Edit Music</button>
+                <div class="menu-content hidden absolute top-10 right-0 bg-white border border-gray-300 z-10 transition duration-300 ease-in-out" id="menu-content">
+                    <button id="google-login-button" class="w-full px-4 py-3 text-white bg-blue-500 rounded-md shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-transparent focus:bg-gradient-to-r focus:from-pink-500 focus:via-purple-500 focus:to-blue-500">
+                        Login with Google
+                    </button>
+                    <div class="w-full h-[1px] bg-gray-300"></div>
+                    <button id="openEditSoundModal" class="w-full px-4 py-3 text-gray-700 bg-gray-200 rounded-md shadow-md hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-transparent focus:bg-gradient-to-r focus:from-pink-500 focus:via-purple-500 focus:to-blue-500 hidden">
+                        Edit Music
+                    </button>
                 </div>
             </div>
         </div>
