better progressbar management

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -181,7 +181,7 @@
                     </button>
                 </div>
                 <!--CSS code also in src/css/tailwind.css--->
-                <div id="progressBar" class="group relative w-full h-2 bg-slate-100 border border-spacing-0.5 border-slate-400 rounded overflow-visible">
+                <div id="progressBar" class="group hover:cursor-pointer relative w-full h-2 bg-slate-100 border border-spacing-0.5 border-slate-400 rounded overflow-visible">
                     <div id="progress" class="absolute left-0 top-0 h-full bg-gradient-to-r from-pink-500 via-purple-500 to-blue-500 transition-all ease-in-out" style="width: 0%;"></div>
                     <div id="progress-selector" class="absolute h-4 w-4 bg-purple-500 border-2 rounded-full -top-[5px] scale-0 group-hover:scale-100 transform transition-transform ease-in-out" style="left: -8px;"></div>
                 </div>
