--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,10 @@
 <head>
     <!-- Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://accounts.google.com/gsi/style">
+
     <meta charset="UTF-8">
     <title>Chat Luthier</title>
 
@@ -89,19 +92,27 @@
             <!-- Your existing main content -->
 
             <!-- Ambiance Sounds Section -->
-            <div style="gap: 20px; display: flex; align-items: center; justify-content: center;">
-                <h2 style="margin: 0;">Ambiance Sounds</h2>
-                <button id="resetAmbient" class="button-stop">Reset Ambiance</button>
-            </div>
             <section id="ambiance" class="section"></section>
             <section id="ambianceLocal" class="section"></section>
 
             <!-- Soundboard Section -->
-            <h2>Soundboard
-                <input type="range" min="0" max="100" value="50" class="slider" id="soundboard-volume">
-            </h2>
-            <section id="soundboard" class="section"></section>
-            <section id="soundboardLocal" class="section"></section>
+            <div class="flex align-middle items-center p-2 space-x-1.5 bg-slate-200">
+                <div class="basis-5/6">
+                    <section id="soundboard" class="section-sound-board"></section>
+                    <section id="soundboardLocal" class="section-sound-board"></section>
+                </div>
+                <div class="flex basis-1/12 align-middle items-center p-2 space-x-1.5">
+                    <div class="flex items-center justify-center bg-none text-fontColor p-2 rounded">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="h-6 w-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
+                        </svg>
+                    </div>
+                </div>
+                <!-- Input Progress Bar -->
+                <input id="soundboard-volume" type="range" min="0" max="100" value="50"
+                       class="slider h-1.5 bg-slate-100 border border-spacing-1 border-slate-400 rounded-full appearance-none focus:outline-none focus:ring-2 focus:ring-purple-500 max-w-[5rem]">
+                </div>
+            </div>
 
 
             <!-- ID Management Section -->
@@ -143,7 +154,17 @@
         <!-- Content Area -->
         <div class="flex justify-between items-center flex-grow px-4">
             <!-- Left Section: Buttons -->
-            <div class="flex-1 flex justify-center items-center space-x-2 min-w-0" id="background-music-Credit"></div>
+            <div class="flex-1 flex justify-center items-center space-x-2 min-w-0">
+                <div class="basis-3/4 flex justify-center items-center space-x-2 min-w-0" id="background-music-Credit"></div>
+
+                <!-- Left 2nd section -->
+                <div class="basis-1/4 flex justify-center items-center space-x-2 min-w-0">
+                    <button id="resetAmbient" class="group bg-transparent flex flex-col items-center space-y-1">
+                        <svg width="20" height="20" viewBox="0 0 21 21" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="1.3439999999999999"> <g fill="none" fill-rule="evenodd" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 1 1 0 2.5 2.5)"> <path d="m3.98652376 1.07807068c-2.38377179 1.38514556-3.98652376 3.96636605-3.98652376 6.92192932 0 4.418278 3.581722 8 8 8s8-3.581722 8-8-3.581722-8-8-8"></path> <path d="m4 1v4h-4" transform="matrix(1 0 0 -1 0 6)"></path> </g> </g><g id="SVGRepo_iconCarrier"> <g fill="none" fill-rule="evenodd" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" transform="matrix(0 1 1 0 2.5 2.5)"> <path d="m3.98652376 1.07807068c-2.38377179 1.38514556-3.98652376 3.96636605-3.98652376 6.92192932 0 4.418278 3.581722 8 8 8s8-3.581722 8-8-3.581722-8-8-8"></path> <path d="m4 1v4h-4" transform="matrix(1 0 0 -1 0 6)"></path> </g> </g></svg>
+                        <span class="text-[10px] font-medium tracking-widest text-fontColor">RESET AMBIANCE</span>
+                    </button>
+                </div>
+            </div>
 
             <!-- Center Section: Music Player -->
             <div class="flex-1 flex flex-col items-center justify-center min-w-0 px-4">
@@ -190,21 +211,25 @@
             <!-- Right Section: Theme Selector with Icon and Progress Bar -->
             <div class="flex-1 flex items-center justify-evenly min-w-0 space-x-4">
                 <!-- Theme Selector -->
-                <select id="contextSelector" class="px-3 py-2 bg-gray-700 text-white rounded focus:ring-2 focus:ring-purple-500">
-                    <option>default</option>
-                </select>
+                <div class="flex flex-1/2">
+                    <select id="contextSelector" class="px-3 py-2 bg-gray-700 text-white rounded focus:ring-2 focus:ring-purple-500">
+                        <option>default</option>
+                    </select>
+                </div>
 
                 <!-- Cool Icon -->
-                <div class="flex align-middle items-center p-2 space-x-1.5">
-                    <div class="flex items-center justify-center bg-none text-fontColor p-2 rounded">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="h-6 w-6">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
-                        </svg>
-                    </div>
+                <div class="flex flex-1/2">
+                    <div class="flex align-middle items-center p-2 space-x-1.5">
+                        <div class="flex items-center justify-center bg-none text-fontColor p-2 rounded">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="h-6 w-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 0 1 0 12.728M16.463 8.288a5.25 5.25 0 0 1 0 7.424M6.75 8.25l4.72-4.72a.75.75 0 0 1 1.28.53v15.88a.75.75 0 0 1-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.009 9.009 0 0 1 2.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75Z" />
+                            </svg>
+                        </div>
 
-                    <!-- Input Progress Bar -->
-                    <input id="music-volume" type="range" min="0" max="100" value="50"
-                           class="slider h-1.5 bg-slate-100 border border-spacing-1 border-slate-400 rounded-full appearance-none focus:outline-none focus:ring-2 focus:ring-purple-500 max-w-[5rem]">
+                        <!-- Input Progress Bar -->
+                        <input id="music-volume" type="range" min="0" max="100" value="50"
+                               class="slider h-1.5 bg-slate-100 border border-spacing-1 border-slate-400 rounded-full appearance-none focus:outline-none focus:ring-2 focus:ring-purple-500 max-w-[5rem]">
+                    </div>
                 </div>
             </div>
         </div>
