--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,20 +29,33 @@
                 <img src="images/favicons/MainLogo.PNG" alt="Le Chat Luthier Logo" class="logo">
                 <h1 class="text-xl font-bold">Le Chat Luthier</h1>
             </div>
-            <div class="menu-dropdown">
-                <button class="bg-transparent size-16 cursor-pointer text-fontColor" id="toggleMenu">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                      <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                    </svg>
-                </button>
-                <div id="menuContent" class="menu-content hidden absolute top-10 right-0 bg-slate-100 border border-gray-300 z-10 transition duration-300 ease-in-out opacity-0 scale-95">
-                    <button id="google-login-button" class="menu-item">
-                        Login with Google
+            <div class="flex justify-center align-middle items-center space-x-16">
+                <div id="id-management space-x-4">
+                    <div class="">
+                        <input type="text" id="join-id-input" placeholder="Enter Session Name" class="px-2 py-1 border border-gray-300 rounded">
+                        <button id="join-id-button" class="button">Join</button>
+                        <button id="disconnect-button" style="display: none;" class="bg-red-500 text-white px-3 py-1 rounded">Disconnect</button>
+                    </div>
+                    <p id="your-id" style="display: none;" class="text-sm">
+                        Session ID: <span id="generated-id"></span>
+                    </p>
+                    <p id="status-message" class="text-sm text-gray-500"></p>
+                </div>
+                <div class="menu-dropdown">
+                    <button class="bg-transparent size-16 cursor-pointer text-fontColor" id="toggleMenu">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                        </svg>
                     </button>
-                    <div class="menu-divider"></div>
-                    <button id="openEditSoundModal" class="menu-item hidden">
-                        Edit Music
-                    </button>
+                    <div id="menuContent" class="menu-content hidden absolute top-10 right-0 bg-slate-100 border border-gray-300 z-10 transition duration-300 ease-in-out opacity-0 scale-95">
+                        <button id="google-login-button" class="menu-item">
+                            Login with Google
+                        </button>
+                        <div class="menu-divider"></div>
+                        <button id="openEditSoundModal" class="menu-item hidden">
+                            Edit Music
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -113,28 +126,7 @@
                        class="slider h-1.5 bg-slate-100 border border-spacing-1 border-slate-400 rounded-full appearance-none focus:outline-none focus:ring-2 focus:ring-purple-500 max-w-[5rem]">
                 </div>
             </div>
-
-
-            <!-- ID Management Section -->
-            <div id="id-management" class="id-management">
-                <h2>Session Management</h2>
-                <!-- Join ID -->
-                <div class="join-id">
-                    <input type="text" id="join-id-input" placeholder="Enter Session ID">
-                    <button id="join-id-button">Join Session</button>
-                    <button id="disconnect-button" style="display: none;">Disconnect</button>
-                </div>
-                <!-- Display Session ID and Connection Status -->
-                <p id="your-id" style="display: none;">
-                    Session ID : <span id="generated-id"></span>
-                </p>
-                <!-- Status Message -->
-                <p id="status-message"></p>
-                <!-- Connection Status will be appended here -->
-
-            </div>
         </div>
-
         <!-- Footer -->
     <footer>
         <div class="footer-content h-20">
