--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,6 +16,7 @@
     <link rel="icon" href="images/favicons/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="site.webmanifest">
     <link rel="manifest" href="manifest.json">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     
     <!-- Webpack will inject CSS here -->
 </head>
@@ -82,7 +83,9 @@
             <div id="progressBar">
                 <div id="sound-progress"></div>
             </div>
-            <button id="nextButton">»</button>
+            <button id="nextButton" class="button-primary">
+                <i class="fas fa-forward"></i>
+            </button>
         </div>
 
         <section id="background-music" class="section">
@@ -90,7 +93,7 @@
             <button id="dynamicButton" class="button-primary">Play Dynamic</button>
             <button id="intenseButton" class="button-primary">Play Intense</button>
             <button id="allButton" class="button-primary">Play All</button>
-            <select id="contextSelector">
+            <select id="contextSelector" class="selector-primary">
                 <option>default</option>
             </select>
         </section>
@@ -116,7 +119,7 @@
             <h2>Session Management</h2>
             <!-- Join ID -->
             <div class="join-id">
-                <input type="text" id="join-id-input" placeholder="Enter Session ID">
+                <input type="text" id="join-id-input" class="text-input" placeholder="Enter Session ID">
                 <button id="join-id-button" class="button-primary">Join Session</button>
                 <button id="disconnect-button" class="button-primary" style="display: none;">Disconnect</button>
             </div>
