--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -61,6 +61,11 @@
             <div class="modal-header">
                 <span class="close-btn" id="closeEditSoundModal">&times;</span> <!-- Close button -->
                 <h2>Edit Sounds</h2>
+                <select id="soundTypeSelector" class="selector-primary">
+                    <option>backgroundMusic</option>
+                    <option>ambianceSounds</option>
+                    <option>soundboard</option>
+                </select>
                 <div class="modal-body" id="sounds-list">
                 </div>
             </div>
