--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -30,12 +30,12 @@
             <div class="menu-dropdown">
                 <button class="menu-button" id="toggleMenu">☰</button>
                 <div class="menu-content" id="menu-content">
-                    <button id="requestsoundButton">Request a sound</button>
-                    <button id="google-login-button">Login with Google</button>
-                    <button id="openEditSoundUserModal" style="display: none;">Edit Music</button>
-                    <button id="openEditSoundAdminModal" style="display: none;">Edit Music GLOBAL (ADMIN)</button>
-                    <button id="openAddSoundModalAdminButton" style="display: none;">Add sound (ADMIN)</button>
-                    <button id="openRequestSoundModalAdminButton" style="display: none;">Review sound (ADMIN)</button>
+                    <button class="button-primary" id="requestsoundButton">Request a sound</button>
+                    <button class="button-primary" id="google-login-button">Login with Google</button>
+                    <button class="button-primary" id="openEditSoundUserModal" style="display: none;">Edit Music</button>
+                    <button class="button-primary" id="openEditSoundAdminModal" style="display: none;">Edit Music GLOBAL (ADMIN)</button>
+                    <button class="button-primary" id="openAddSoundModalAdminButton" style="display: none;">Add sound (ADMIN)</button>
+                    <button class="button-primary" id="openRequestSoundModalAdminButton" style="display: none;">Review sound (ADMIN)</button>
                 </div>
             </div>
         </div>
