--- a/src/pages/offline.html
+++ b/src/pages/offline.html
@@ -6,7 +6,7 @@
     <title>Offline</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: var(--fontfamilly);
             color: #333333;
             background-color: #f4f4f4;
             padding: 20px;
