Add invite URL for sockets

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -154,6 +154,9 @@
             <p id="your-id" style="display: none;">
                 Session ID : <span id="generated-id"></span>
             </p>
+            <div class="join-id">
+                <button id="copy-invite-button" class="button-primary" style="display: none;">Copy Invitation Link</button>
+            </div>
             <!-- Status Message -->
             <p id="status-message"></p>
             <!-- Connection Status will be appended here -->
