--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -36,6 +36,7 @@
                     <button class="button-primary" id="openEditSoundAdminModal" style="display: none;">Edit Music GLOBAL (ADMIN)</button>
                     <button class="button-primary" id="openAddSoundModalAdminButton" style="display: none;">Add sound (ADMIN)</button>
                     <button class="button-primary" id="openRequestSoundModalAdminButton" style="display: none;">Review sound (ADMIN)</button>
+                    <button class="button-primary" id="spotify-toggle-button"><i class="fab fa-spotify"></i> Connect Spotify</button>
                 </div>
             </div>
         </div>
@@ -103,7 +104,7 @@
         <!-- Your existing main content -->
         <!-- Background Music Section -->
         <h2>Background Music
-            <input type="range" min="0" max="100" value="50" class="slider" id="music-volume">
+        <input type="range" min="0" max="100" value="50" class="slider" id="music-volume">
         </h2>
         <section id="background-music-Credit">---</section>
         <div class="progress-and-credits">
