ok spotify + auto build

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -101,8 +101,13 @@
             </div>
         </div>
 
-        <!-- Your existing main content -->
         <!-- Background Music Section -->
+        <div id="music-source-container" style="display: none; align-items: center; gap: 10px; margin-bottom: 10px;">
+            <span id="music-source-label">Site Music</span>
+            <button id="music-source-toggle" class="button-primary music-mode-toggle">
+                <i class="fab fa-spotify"></i> Switch to Spotify
+            </button>
+        </div>
         <h2>Background Music
         <input type="range" min="0" max="100" value="50" class="slider" id="music-volume">
         </h2>
